# rust-notebook

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
docs/: db.sql  ideas.md
res/json/: notes_v0.2.0.json
src/: main.rs  notebook.rs  notebook_json.rs  notebook_sqlite.rs
src/shell/: colors.rs  mod.rs  nanoshell.rs  shell_handler.rs
