[package]
name = "rust-notebook"
version = "1.2.4"
authors = ["Jkutkut"]
repository = "https://github.com/Jkutkut/rust-notebook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
