[package]
name = "rust-notebook"
version = "1.4.3"
authors = ["Jkutkut"]
repository = "https://github.com/Jkutkut/rust-notebook"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
sqlx = { version = "0.5.9", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
# futures = "0.3.18"
